--- a/my.cnf/my.cnf
+++ b/my.cnf/my.cnf
@@ -69,7 +69,13 @@ log_error = /var/log/mysqld.log
 #long_query_time = 1
 #slow_query_log_file = /var/log/mysql-slow.log
 
-### BINARY LOGGING #
+
+### PERFORMANCE SCHEMA QUERY SIZE #
+#max_digest_length = 11024
+#performance_schema_max_sql_text_length = 11024
+#performance_schema_max_digest_length = 11024
+
+### BINARY LOGGING #	### BINARY LOGGING #
 #log_bin = /var/lib//mysql-bin.log
 #expire_logs_days = 14
 #sync_binlog = 1
